stops tag boxes scrolling on mobile #627

--- a/cms/static/css/cms.css
+++ b/cms/static/css/cms.css
@@ -788,9 +788,3 @@ lm-ls1 {
     display: table-cell;
   }
 }
-
-@media screen and (max-width:30em) {
-  .h4-s-i {
-    height: 10rem !important;
-  }
-}
